infra/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soundsentinel-app
  namespace: soundsentinel
spec:
  selector:
    app: soundsentinel-app
  ports:
    - port: 80
      targetPort: 8000
