infra/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soundsentinel-postgres
  namespace: soundsentinel
spec:
  selector:
    app: soundsentinel-postgres
  ports:
    - port: 5432
      targetPort: 5432
